--- a/API_XhcpProject/appsettings.json
+++ b/API_XhcpProject/appsettings.json
@@ -13,6 +13,7 @@
     }
   },
   "ConnectionStrings": {
-    "MySqlConnection": "User ID=root;Password=xmwang1.q;Host=47.104.139.46;Port=3306;Database=Xhcp_Db"
+    "MySqlConnection": "User ID=root;Password=xmwang1.q;Host=47.104.139.46;Port=3306;Database=Xhcp_Db",
+    "RedisConnection": "47.75.100.166:6379,password=wxm!@#redis,connectTimeout=1000,connectRetry=1,syncTimeout=1000"
   }
 }
