--- a/Xhcp_Cache/Xhcp_Cache.csproj
+++ b/Xhcp_Cache/Xhcp_Cache.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="2.1.1" />
+  </ItemGroup>
+
 </Project>
