--- a/API_XhcpProject/API_XhcpProject.csproj
+++ b/API_XhcpProject/API_XhcpProject.csproj
@@ -10,9 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="wwwroot\Controllers\AccountController.cs" />
-    <Compile Include="wwwroot\Controllers\OAuthController.cs" />
-    <Compile Include="wwwroot\Controllers\ValuesController.cs" />
+    <Compile Remove="wwwroot\Controllers\**" />
+    <Content Remove="wwwroot\Controllers\**" />
+    <EmbeddedResource Remove="wwwroot\Controllers\**" />
+    <None Remove="wwwroot\Controllers\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -33,6 +34,10 @@
     <ProjectReference Include="..\Xhcp_Entity\Xhcp_Entity.csproj" />
     <ProjectReference Include="..\Xhcp_Service\Xhcp_Service.csproj" />
     <ProjectReference Include="..\Xhcp_Utility\Xhcp_Utility.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JSONSchema="http://json.schemastore.org/asmdef" /></VisualStudio></ProjectExtensions>
