--- a/API_XhcpProject/API_XhcpProject.csproj
+++ b/API_XhcpProject/API_XhcpProject.csproj
@@ -30,6 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Xhcp_Cache\Xhcp_Cache.csproj" />
     <ProjectReference Include="..\Xhcp_Domain\Xhcp_Domain.csproj" />
     <ProjectReference Include="..\Xhcp_Entity\Xhcp_Entity.csproj" />
     <ProjectReference Include="..\Xhcp_Service\Xhcp_Service.csproj" />
