--- a/Xhcp_Cache/Xhcp_Cache.csproj
+++ b/Xhcp_Cache/Xhcp_Cache.csproj
@@ -1,12 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="2.1.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Xhcp_Core\Xhcp_Core.csproj" />
+    <ProjectReference Include="..\Xhcp_Entity\Xhcp_Entity.csproj" />
   </ItemGroup>
 
 </Project>
